--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,6 +16,7 @@ django-jazzmin==3.0.1
 django-resized==1.0.3
 django-widget-tweaks==1.5.0
 executing==2.1.0
+gunicorn==20.1.0
 icecream==2.1.3
 idna==3.10
 oauthlib==3.2.2
