--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -8,15 +8,16 @@ colorama==0.4.6
 cryptography==44.0.0
 dj-database-url==2.3.0
 Django==5.1.4
+django-admin-honeypot-updated-2021==1.2.0
 django-allauth==65.3.0
 django-cleanup==9.0.0
 django-cloudinary-storage==0.3.0
 django-htmx==1.21.0
+django-ipware==7.0.1
 django-jazzmin==3.0.1
 django-resized==1.0.3
 django-widget-tweaks==1.5.0
 executing==2.1.0
-gunicorn==20.1.0
 icecream==2.1.3
 idna==3.10
 oauthlib==3.2.2
@@ -26,6 +27,7 @@ pycparser==2.22
 Pygments==2.18.0
 PyJWT==2.10.1
 python-decouple==3.8
+python-ipware==3.0.0
 requests==2.32.3
 requests-oauthlib==2.0.0
 setuptools==75.6.0
