--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -18,9 +18,11 @@ django-jazzmin==3.0.1
 django-resized==1.0.3
 django-widget-tweaks==1.5.0
 executing==2.1.0
+gunicorn==23.0.0
 icecream==2.1.3
 idna==3.10
 oauthlib==3.2.2
+packaging==24.2
 pillow==11.0.0
 psycopg2==2.9.10
 pycparser==2.22
