--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,11 +1,18 @@
 asgiref==3.8.1
 asttokens==3.0.0
+attrs==24.3.0
+autobahn==24.4.2
+Automat==24.8.1
 certifi==2024.12.14
 cffi==1.17.1
+channels==4.2.0
+channels_redis==4.2.1
 charset-normalizer==3.4.0
 cloudinary==1.41.0
 colorama==0.4.6
+constantly==23.10.4
 cryptography==44.0.0
+daphne==4.1.2
 dj-database-url==2.3.0
 Django==5.1.4
 django-admin-honeypot-updated-2021==1.2.0
@@ -19,25 +26,36 @@ django-resized==1.0.3
 django-widget-tweaks==1.5.0
 executing==2.1.0
 gunicorn==23.0.0
+hyperlink==21.0.0
 icecream==2.1.3
 idna==3.10
+incremental==24.7.2
+msgpack==1.1.0
 oauthlib==3.2.2
 packaging==24.2
 pillow==11.0.0
 psycopg2==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 Pygments==2.18.0
 PyJWT==2.10.1
+pyOpenSSL==24.3.0
 python-decouple==3.8
 python-ipware==3.0.0
+redis==5.2.1
 requests==2.32.3
 requests-oauthlib==2.0.0
+service-identity==24.2.0
 setuptools==75.6.0
 six==1.17.0
 sqlparse==0.5.3
+Twisted==24.11.0
+txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 uv==0.5.10
 wheel==0.45.1
 whitenoise==6.8.2
+zope.interface==7.2
