--- a/src/core/.env.example
+++ b/src/core/.env.example
@@ -7,3 +7,7 @@ CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 REDIS_URL=
+EMAIL_HOST_PASSWORD=
+EMAIL_HOST_USER=
+CONTACT_EMAIL=
+DEFAULT_FROM_EMAIL=
