Update environment variables, enhance payment verification, and add cleanup command for pending payments

--- a/src/core/.env.example
+++ b/src/core/.env.example
@@ -1,13 +1,15 @@
 DJANGO_SECRET_KEY=
-DJANGO_DEBUG=
+DJANGO_DEBUG=False
 ENVIRONMENT=
 DATABASE_URL=
-POSTGRES_LOCALLY=
+POSTGRES_LOCALLY=False
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
 REDIS_URL=
 EMAIL_HOST_PASSWORD=
 EMAIL_HOST_USER=
-CONTACT_EMAIL=
+CONTACT_EMAIL_1=
+CONTACT_EMAIL_2=
+CONTACT_EMAIL_3=
 DEFAULT_FROM_EMAIL=
