--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -12,6 +12,7 @@ django-admin-honeypot-updated-2021==1.2.0
 django-allauth==65.3.0
 django-cleanup==9.0.0
 django-cloudinary-storage==0.3.0
+django-extensions==3.2.3
 django-htmx==1.21.0
 django-ipware==7.0.1
 django-jazzmin==3.0.1
